# chatgpt-retrieval-plugin-milvus-transformer

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
.well-known/: ai-plugin.json  openapi.yaml
datastore/: datastore.py  factory.py
datastore/providers/: milvus_datastore.py
docs/deployment/: options.md
docs/providers/milvus/: setup.md
examples/authentication-methods/no-auth/: main.py
local_server/: ai-plugin.json  main.py  openapi.yaml
models/: api.py  models.py
scripts/: README.md  grobid_config.json  process_data_fromfolder_to_json.py  process_data_to_json.py
scripts/process_json/: README.md  paper_json_template.json  process_json.py
scripts/xml_to_json/: README.md  process_xml_to_json  process_xml_to_json.py  sample.xml
server/: main.py
services/: data_processing.py
